--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = src/tts_api/_version.py
-versionfile_build = tts_api/_version.py
+versionfile_source = src/scribe/_version.py
+versionfile_build = scribe/_version.py
 tag_prefix = v
-parentdir_prefix = tts_api-
+parentdir_prefix = scribe-
 
 [flake8]
 per-file-ignores =
